<resources>
    <string name="app_name">SumandoDeprisa</string>
    <string name="pregunta">¿Cuántos segundos necesitas para resolver la suma?</string>
    <string name="pistaSegundos">Escribe aquí tus segunditos</string>
    <string name="comienzo">Comenzemos</string>

    <string name="salida">salir</string>
    <string name="simbolosuma">+</string>
    <string name="pistaResultado">Pon aquí el resultado</string>
    <string name="resolver">Resulve</string>

    <string name="acierto">No era tan difícil, en primaria se aprende a sumar</string>
    <string name="fallo">Eres un paquete, vuelve a primaria</string>
</resources>