<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/pregunta"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etSegundos"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:hint="@string/pistaSegundos"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btInicio"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/comienzo"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textSize="15sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>