<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PruebaMatematica">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btSalida"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/salida"/>

        <ProgressBar
            android:id="@+id/pB"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="198dp"
            android:layout_height="33dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvSumando1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/simbolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simbolosuma"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvSumando2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="190dp"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/edtRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:inputType="number"
            android:hint="@string/pistaResultado"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btResolver"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/resolver"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>